css for users in progress, new bug with too long svgs-

--- a/src/components/UserInput/UserInput.css
+++ b/src/components/UserInput/UserInput.css
@@ -13,7 +13,7 @@
 .label-field {
   font-size: 14px;
   font-weight: 500;
-  color: #000000;
+  color: var(--input-background-color);
   margin-bottom: 5px;
 }
 
@@ -39,4 +39,30 @@
   
   border-color: #ff0000;
   border-style: solid;
+}
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #1d24af;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #1f2591;
 }
